force-app/main/default/objects/Nimbus_Invoice__c/Nimbus_Invoice__c.object-meta.xml
<CustomObject>
    <description>Synthetic Nimbus invoice. No real financial data.</description>
    <label>Nimbus Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nimbus Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>