force-app/main/default/objects/Nimbus_Invoice__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Invoice amount due.</description>
    <label>Amount</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>