force-app/main/default/objects/Nimbus_Invoice__c/fields/Nimbus_Account__c.field-meta.xml
<CustomField>
    <fullName>Nimbus_Account__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Owning customer account.</description>
    <label>Nimbus Account</label>
    <referenceTo>Nimbus_Account__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>